[gd_scene load_steps=7 format=3 uid="uid://ba6j46b74ptrc"]

[ext_resource type="Script" path="res://src/cards/dual_card.gd" id="1_1xj2b"]
[ext_resource type="Texture2D" uid="uid://cptxnmpjn0yys" path="res://assets/dual_card.png" id="1_dra32"]
[ext_resource type="Texture2D" uid="uid://0fasvutovcm" path="res://assets/ranks/rank_1.png" id="2_ehnn1"]
[ext_resource type="FontFile" uid="uid://cjm3nfgjtp0ex" path="res://assets/fonts/engravers/CAT Engravers.ttf" id="3_ymth1"]
[ext_resource type="Texture2D" uid="uid://ce786en8ql3ui" path="res://assets/icons/sword.png" id="4_hcvln"]
[ext_resource type="Texture2D" uid="uid://dviouaw1aihwr" path="res://assets/icons/walls.png" id="5_t14rv"]

[node name="DualCard" type="Control"]
custom_minimum_size = Vector2(78, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 78.0
offset_bottom = 120.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1xj2b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 65.0
offset_bottom = 100.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_dra32")

[node name="RankIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 49.0
offset_right = 49.0
offset_bottom = 69.0
texture = ExtResource("2_ehnn1")
expand_mode = 1

[node name="AttackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 74.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ymth1")
text = "Sword"

[node name="AttackIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 15.0
offset_right = 88.0
offset_bottom = 95.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_hcvln")

[node name="DefenseIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 65.0
offset_right = 112.0
offset_bottom = 145.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_t14rv")

[node name="DefenseLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 94.0
offset_right = 75.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ymth1")
text = "Walls"
horizontal_alignment = 2
vertical_alignment = 2
